--- a/FrontEnd/src/assets/css/TeamsPage.css
+++ b/FrontEnd/src/assets/css/TeamsPage.css
@@ -1,4 +1,11 @@
-.TeamPage_Div {
-    width: 100%;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: content-box;
 
+}
+
+
+.link{
+    text-decoration: none;
 }
