--- a/FrontEnd/src/assets/css/DriversPage.css
+++ b/FrontEnd/src/assets/css/DriversPage.css
@@ -11,3 +11,17 @@
     text-decoration: none;
     color: inherit;
 }
+
+
+.DriverPageDiv .link {
+ 
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+     
+ }
+ 
+ .DriverPageDiv .link:hover {
+    transform: scale(1.05);
+    opacity: 0.9; 
+ 
+ 
+ }
