--- a/FrontEnd/src/assets/css/TeamIcons.css
+++ b/FrontEnd/src/assets/css/TeamIcons.css
@@ -1,22 +1,13 @@
 .TeamIcon {
     position: relative;
-    width:94.5%;
+    width:100%;
     height: 400px;
-    background-size: cover;
+    background-size:cover;
     background-position: center;
     background-repeat: no-repeat;
     color: white;
     border-radius: 20px;
     padding: 1em;
     margin: 1em;
-    font-family: "Bebas Neue", sans-serif;ßßßßß
-}
-
-h3 {
-    background-color:  white;
-    width: fit-content;
-    padding: .5em;
-    border-radius: 20px;
-    color: black;
-    
+    font-family: "Bebas Neue", sans-serif;
 }
