--- a/FrontEnd/src/assets/css/ShopItem.css
+++ b/FrontEnd/src/assets/css/ShopItem.css
@@ -38,3 +38,11 @@ padding: .5em;
 }
 
 
+button{
+    background-color: #e10602;
+    border-radius: 15px;
+    padding: .5em;
+    border: none;
+color: white;
+
+}
