--- a/FrontEnd/src/assets/css/ShopPage.css
+++ b/FrontEnd/src/assets/css/ShopPage.css
@@ -1,22 +1,34 @@
 /*Shop Header*/
-.ShopHeaderDiv{
-height: auto;
-background-color: black;
+.ShopHeaderDiv {
+  height: auto;
+  background-color: black;
 }
 
-.ShopNav{
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    justify-content: space-evenly;
-
+.ShopNav {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  justify-content: space-evenly;
 }
 
-.ShopNavBtn{
+.ShopNavBtn {
+  background-color: #e10602;
+  border-radius: 15px;
+  padding: 0.5em;
+  color: white;
+}
 
-    background-color: #e10602;
-    border-radius: 15px;
-    padding: .5em;
-    color: white;
-    
+.CartItem {
+  width: 200px;
+  border: 1px solid black;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 1em;
+}
+
+.cartItemPic {
+  width: 150px;
 }
